update content in file index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-git
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>test-repository</title>
+</head>
+<body>
+	<h1>To DO List</h1>
+	<ul>
+		<li>Wash Up</li>
+		<li>Have a breakfast(eggs and bread)</li>
+		<li>Drink tea(green)</li>
+		<li>Read the newspaper</li>
+	</ul>
+</body>
+</html>
