change the last element in file index.html

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<ul>
 		<li>Wash Up</li>
 		<li>Have a breakfast(eggs and bread)</li>
-		<li>Read the newspaper</li>
-		<li>Drink coffee</li>
+		<li>Drink tea(green)</li>
+		<li>Watch the TV</li>
 	</ul>
 </body>
 </html>
